Closed Bug 405996 Opened 18 years ago Closed 18 years ago

Fix gtkmozembed to use PRInt64 instead of nsInt64 to make elsa happy

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9beta2

People

(Reporter: benjamin, Assigned: benjamin)

References

Details

Attachments

(1 file)

The automatic rewriting tools (elsa) get confused with nsInt64 used as a PRInt64 in gtkmozembed. This patch makes us use PRInt64 consistently to avoid the error.
Attachment #290687 - Flags: review?(ted.mielczarek)
Attachment #290687 - Flags: review?(ted.mielczarek) → review+
Attachment #290687 - Flags: approval1.9?
Attachment #290687 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
Checking in embedding/browser/gtk/src/EmbedGlobalHistory.cpp; /cvsroot/mozilla/embedding/browser/gtk/src/EmbedGlobalHistory.cpp,v <-- EmbedGlobalHistory.cpp new revision: 1.16; previous revision: 1.15 done
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: