Bug 405996 - "Fix gtkmozembed to use PRInt64 instead of nsInt64 to make elsa happy" [p=benjamin@smedbergs.us (Benjamin Smedberg [bsmedberg]) r=luser a1.9=damons]